...
  "accessibility": {
    "irma_logo": "Yivi Logo",
    "slideshow": "Slide {i} of {n}: {description}",
    "menu": "Menu",
    "back": "Back",
    "close": "Close",
    "next": "Next",
    "alert": "Alert",
    "previous": "Previous",
    "expanded": "Expanded",
    "collapsed": "Collapsed",
    "unfold": "Expand",
    "update": "Update",
...
    "title": "New terms and conditions",
    "explanation_markdown": "The management of Yivi has recently been transferred to another organization ([Yivi B.V.](https://yivi.app/en/about_yivi)).\n\nTherefore, the terms and conditions have changed slightly.\n\nWe ask you to [read them]({terms_url}) and agree to them below.",
    "accept": "Accept",
    "dismiss": "Not now"
  },
  "action_feedback": {
    "ok": "OK"
  },
  "activity": {
    "data_deleted": "Data deleted",
    "data_deleted_semantics": "Data deleted from {issuerName} on {date}",
    "data_received": "Data received",
    "data_received_semantics": "Data received from {otherParty} on {date}",
...
  },
  "change_pin": {
    "dialog": {
      "title": "Are you sure?",
      "body": "Are you sure you want to reset the current PIN?",
      "ok": "Change",
      "cancel": "Cancel"
    },
    "toast": "Success! Your new PIN has been saved",
    "enter_pin": {
      "instruction": "Enter your current PIN",
      "error_title": "PIN incorrect",
      "error": "Enter your current PIN",
...
        "title": "Add e-mail address",
        "header": "Link your e-mail address to your Yivi app",
        "explanation": "An e-mail address allows you to remotely disable your Yivi app, in case your mobile has been lost or stolen",
        "input": {
          "label": "E-mail address",
          "hint": "Fill in",
          "invalid": "Invalid e-mail address"
        },
        "confirm_skip_dialog": {
          "title": "Are you sure?",
          "explanation": "Adding an e-mail address increases safety",
          "decline": "Enter an e-mail address"
        }
...
  },
  "error": {
    "title": "Sorry, something went wrong",
    "blocked_title": "App blocked",
    "button_ok": "OK",
    "button_send_to_irma": "Send this message to Yivi",
    "button_show_error": "Show technical details",
    "button_retry": "Please try again",
    "button_back": "Back",
    "button_reset": "Start all over",
    "details_title": "Error message",
    "report": "If this happens again, please inform the Yivi team.",
    "types": {
...
    "empty": {
      "title": "Obtain your personal data",
      "subtitle": "Tap on the plus icon to obtain your personal data."
    }
  },
  "issuance": {
    "title": "Add data",
    "description": "Do you want to add this data to your Yivi app?",
    "add": "Add data",
    "cancel": "Cancel",
    "success_feedback": {
      "header": "Success",
      "text": "The data has been successfully added to Yivi"
...
    "invalid_title": "PIN incorrect",
    "invalid_pin": {
      "attempts-0": "This PIN is not correct. You have {attemps} attempts left before your Yivi app will be blocked temporarily.",
      "attempts-1": "This PIN is not correct. You have {attemps} attempt left before your Yivi app will be blocked temporarily.",
      "attempts-2": "This PIN is not correct. You have {attemps} attempts left before your Yivi app will be blocked temporarily."
    },
    "invalid_close": "Try again",
    "blocked_title": "App blocked",
    "blocked_pin": "Your app has been blocked for {blocked}. Please try again later.",
    "blocked_close": "Try again",
    "done": "Continue",
    "view": "Show PIN",
    "hide": "Hide PIN"
...
    "done": "Done",
    "next": "Next",
    "previous": "Previous",
    "cancel": "Cancel",
    "confirm": "Confirm",
    "delete": "Delete",
    "skip": "Skip",
    "continue": "Continue",
    "retry": "Try again",
    "error": "Something went wrong",
    "end_of_list": "You have reached the end of the list",
    "unknown": "Unknown",
    "go_back": "Go back",
...
