...
                TranslatedText(
                  "email_issuance.verify_code.body",
                  translationParams: {"email": state.email},
                ),
                SizedBox(height: theme.largeSpacing),
                Pinput(
                  key: const Key("email_verification_code_input_field"),
                  keyboardType: .text,
                  textCapitalization: .characters,
                  focusNode: _focusNode,
                  autofocus: true,
                  mainAxisAlignment: .start,
                  defaultPinTheme: defaultPinTheme,
...
