...

    return Row(
      crossAxisAlignment: CrossAxisAlignment.center,
      mainAxisAlignment: MainAxisAlignment.start,
      children: [
        Checkbox(
          key: const Key('accept_terms_checkbox'),
          value: isAccepted,
          activeColor: theme.themeData.colorScheme.secondary,
          onChanged: (isAccepted) => onToggleAccepted(
            isAccepted ?? false,
          ),
        ),
...
