...
                        ),
                      ),
              ),
              // Next button
              Flexible(
                child: YiviThemedButton(
                  key: const Key("enrollment_next_button"),
                  label: "ui.next",
                  onPressed: onContinue,
                ),
              ),
            ],
          ),
...
